@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-07-28T08:21:23Z",
+  "timestamp" : "2022-07-28T16:24:54Z",
   "count_outdated" : 419,
   "uniques_outdated" : 241,
   "count" : 445,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
