@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-07-28T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
