@@ -1,3 +1,10 @@
+2022-07-28T16:24:54Z:
+* notice: last 14d: unq all: 4 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 241 419 / 257 445
+* notice: next accum: outdated-unq outdated-all / unq all: 241 419 / 257 445
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-14 2022-07-28]
+
 2022-07-28T08:21:23Z:
 * notice: last 14d: unq all: 4 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 241 419 / 256 445
